--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     ports:
       - "8090:8090"
     extra_hosts:
-      - "nadm.onch3.co.kr:127.0.0.1"
+      - "api.xn--oi2b31he2e32g.xn--3e0b707e:127.0.0.1"
 volumes:
   lbdata:
     driver: local
