--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -9,6 +9,19 @@ server {
         #return 301 https://$server_name$request_uri;
     }
 
+     location /phpmyadmin {
+        root /var/www/api;
+        index index.php index.html index.htm;
+        location ~ ^/phpmyadmin/(.+\.php)$ {
+            try_files $uri =404;
+            root /var/www/api;
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
+    }
+
 
     location /socket.io/ {
         proxy_set_header Host $http_host;
