feat: phpmyadmin 접속 방법 추가

--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -6,22 +6,27 @@ server {
         root /var/www/api/public;
         index  index.php index.html index.htm;
         try_files $uri $uri/ /index.php?$query_string;
-        #return 301 https://$server_name$request_uri;
     }
 
     location /phpmyadmin {
         root /var/www/api;
         index index.php index.html index.htm;
+        
+        rewrite ^/phpmyadmin$ http://localhost:8090/phpmyadmin/ permanent;
+
+        if ($http_referer = "") {
+            return 404; # 레퍼러가 없는 경우 404 에러 반환
+        }
+
+        try_files $uri $uri/ /phpmyadmin/index.php$is_args$args;
         location ~ ^/phpmyadmin/(.+\.php)$ {
             try_files $uri =404;
-            root /var/www/api;
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
     }
-
 
     location /socket.io/ {
         proxy_set_header Host $http_host;
